chore(depcruise): tighten client entrypoint debt

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -49,8 +49,10 @@
       "@tearleads/local-write-orchestrator": ["../local-write-orchestrator/src/index.ts"],
       "@tearleads/keychain/package.json": ["../keychain/package.json"],
       "@tearleads/keychain": ["../keychain/src/index.ts"],
+      "@tearleads/keychain/clientEntry": ["../keychain/src/clientEntry.ts"],
       "@tearleads/wallet/package.json": ["../wallet/package.json"],
       "@tearleads/wallet": ["../wallet/src/index.ts"],
+      "@tearleads/wallet/clientEntry": ["../wallet/src/clientEntry.ts"],
       "@tearleads/notes/package.json": ["../notes/package.json"],
       "@tearleads/notes": ["../notes/src/index.ts"],
       "@tearleads/search/package.json": ["../search/package.json"],
@@ -59,6 +61,7 @@
       "@tearleads/settings": ["../settings/src/index.ts"],
       "@tearleads/vfs-sync/package.json": ["../vfs-sync/package.json"],
       "@tearleads/vfs-sync": ["../vfs-sync/src/index.ts"],
+      "@tearleads/vfs-sync/clientEntry": ["../vfs-sync/src/clientEntry.ts"],
       "@tearleads/terminal/package.json": ["../terminal/package.json"],
       "@tearleads/terminal": ["../terminal/src/index.ts"],
       "@tearleads/ui/package.json": ["../ui/package.json"],
