--- a/packages/vfs-sync/package.json
+++ b/packages/vfs-sync/package.json
@@ -10,6 +10,10 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     },
+    "./clientEntry": {
+      "types": "./src/clientEntry.ts",
+      "import": "./src/clientEntry.ts"
+    },
     "./vfs": {
       "types": "./src/vfs/index.ts",
       "import": "./src/vfs/index.ts"
