chore(depcruise): reduce entrypoint exceptions

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,6 +18,8 @@
       "@admin/*": ["../admin/src/*"],
       "@tearleads/admin/package.json": ["../admin/package.json"],
       "@tearleads/admin": ["../admin/src/index.ts"],
+      "@tearleads/admin/clientEntry": ["../admin/src/clientEntry.ts"],
+      "@tearleads/analytics/clientEntry": ["../analytics/src/clientEntry.ts"],
       "@tearleads/audio/package.json": ["../audio/package.json"],
       "@tearleads/audio": ["../audio/src/index.ts"],
       "@tearleads/backups/package.json": ["../backups/package.json"],
@@ -43,6 +45,7 @@
       "@tearleads/email": ["../email/src/index.ts"],
       "@tearleads/health/package.json": ["../health/package.json"],
       "@tearleads/health": ["../health/src/index.ts"],
+      "@tearleads/health/clientEntry": ["../health/src/clientEntry.ts"],
       "@tearleads/help/package.json": ["../help/package.json"],
       "@tearleads/help": ["../help/src/index.ts"],
       "@tearleads/local-write-orchestrator/package.json": ["../local-write-orchestrator/package.json"],
@@ -50,6 +53,7 @@
       "@tearleads/keychain/package.json": ["../keychain/package.json"],
       "@tearleads/keychain": ["../keychain/src/index.ts"],
       "@tearleads/keychain/clientEntry": ["../keychain/src/clientEntry.ts"],
+      "@tearleads/notifications/clientEntry": ["../notifications/src/clientEntry.ts"],
       "@tearleads/wallet/package.json": ["../wallet/package.json"],
       "@tearleads/wallet": ["../wallet/src/index.ts"],
       "@tearleads/wallet/clientEntry": ["../wallet/src/clientEntry.ts"],
