--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,6 +10,10 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     },
+    "./clientEntry": {
+      "types": "./src/clientEntry.ts",
+      "import": "./src/clientEntry.ts"
+    },
     "./package.json": "./package.json"
   },
   "files": [
