--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -10,6 +10,10 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     },
+    "./clientEntry": {
+      "types": "./src/clientEntry.ts",
+      "import": "./src/clientEntry.ts"
+    },
     "./stores": {
       "types": "./src/stores/index.ts",
       "import": "./src/stores/index.ts"
