chore(depcruise): zero entrypoint exceptions

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -10,6 +10,10 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     },
+    "./clientEntry": {
+      "types": "./src/clientEntry.ts",
+      "import": "./src/clientEntry.ts"
+    },
     "./authStorage": {
       "types": "./src/authStorage.ts",
       "import": "./src/authStorage.ts"
