chore(dev): remove api/smtp env examples
Remove API and SMTP .env.example templates for dev bootstrap,
and load shared .secrets/dev.env for package dev startup.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,7 +32,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsx ../../scripts/lib/killPnpmDev.ts && tsx watch --clear-screen=false src/index.ts",
+    "dev": "sh ../../scripts/lib/runWithDevEnv.sh sh -c 'tsx ../../scripts/lib/killPnpmDev.ts && tsx watch --clear-screen=false src/index.ts'",
     "build": "tsc && pnpm buildOpenapi",
     "buildOpenapi": "tsx scripts/generateOpenapi.ts",
     "createAccount": "tsx scripts/createAccount.ts",
