--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,7 +32,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "sh ../../scripts/lib/runWithDevEnv.sh tsx ../../scripts/lib/killPnpmDev.ts && sh ../../scripts/lib/runWithDevEnv.sh tsx watch --clear-screen=false src/index.ts",
+    "dev": "sh ../../scripts/lib/runWithDevEnv.sh sh -c 'tsx ../../scripts/lib/killPnpmDev.ts && tsx watch --clear-screen=false src/index.ts'",
     "build": "tsc && pnpm buildOpenapi",
     "buildOpenapi": "tsx scripts/generateOpenapi.ts",
     "createAccount": "tsx scripts/createAccount.ts",
